# hpc-agent-core

./: .gitignore  PORTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
hpc_agent_core/: config.py  docs_server.py  doctor.py  middleware.py  models.py  serving.py
hpc_agent_core/compute/: base.py  gridengine.py  slurm.py
hpc_agent_core/rag/: embed.py  ingest.py  store.py
