[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent-core"
version = "0.4.3"
description = "Shared runtime for the HPC MCP agent family: SSH middleware, PSI/J-style job models, scheduler backends, docs RAG, doctor, and serving, reused across per-machine plugins (Rikyu, HOKUSAI, Octopus, ...)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "remotemanager",
    "httpx",
    "numpy",
    "pydantic",
]

[project.urls]
Repository = "https://github.com/william-dawson/hpc-agent-core"

[tool.setuptools.packages.find]
include = ["hpc_agent_core*"]
